# crust

./: Cargo.toml  LICENSE  README.md  TODO
crates/app/: Cargo.toml  build.rs
crates/app/resources/: crust.desktop
crates/app/src/: crash.rs  main.rs  seventv.rs  streamer_mode.rs  updater.rs
crates/app/src/runtime/: assets.rs  badges.rs  channel_points_claimer.rs  emote_loading.rs  eventsub_backfill.rs  eventsub_notices.rs  history.rs  hype_train_poller.rs  link_preview.rs  live_feed.rs  mod.rs  plugins.rs  profiles.rs  system_messages.rs
crates/core/: Cargo.toml
crates/core/src/: badges.rs  emoji.rs  events.rs  lib.rs  notifications.rs  plugins.rs  sound.rs  state.rs
crates/core/src/commands/: alias.rs  mod.rs
crates/core/src/filters/: ast.rs  context.rs  eval.rs  lexer.rs  mod.rs  parser.rs  types.rs
crates/core/src/format/: mod.rs
crates/core/src/highlight/: mod.rs
crates/core/src/hotkeys/: mod.rs
crates/core/src/ignores/: mod.rs
crates/core/src/model/: filters.rs  identifiers.rs  live_channel.rs  messages.rs  mod.rs  mod_actions.rs  nicknames.rs  profile.rs  room.rs  sender.rs
crates/core/src/search/: mod.rs  parser.rs  predicate.rs
crates/core/tests/: filter_dsl_acceptance.rs  perf_tokenize.rs
crates/emotes/: Cargo.toml
crates/emotes/src/: lib.rs
crates/emotes/src/cache/: mod.rs
crates/emotes/src/providers/: mod.rs
crates/kick/: Cargo.toml
crates/kick/src/: api.rs  lib.rs  session.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  logs.rs  settings.rs
crates/twitch/: Cargo.toml
crates/twitch/src/: eventsub.rs  helix.rs  lib.rs
crates/twitch/src/irc/: mod.rs  types.rs
crates/twitch/src/providers/: mod.rs  pronouns.rs
crates/twitch/src/session/: client.rs  generic_irc.rs  mod.rs  ratelimit.rs
crates/twitch/tests/: message_id_fallback.rs  perf_parsing.rs  pinned_parsing.rs  replay_soak.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  commands.rs  external.rs  lib.rs  perf.rs  sound.rs  spell.rs  spellcheck.rs  stream_status.rs  theme.rs
crates/ui/src/widgets/: account_switcher.rs  analytics.rs  channel_list.rs  chat_input.rs  chrome.rs  crash_viewer.rs  emoji_list.rs  emote_picker.rs  filter_editor.rs  global_search.rs  hype_train_banner.rs  info_bars.rs  irc_status.rs  join_dialog.rs  live_feed.rs  loading_screen.rs  login_dialog.rs  mentions.rs  message_list.rs  message_search.rs  mod.rs  plugin_ui.rs  settings_page.rs  shared_chat_banner.rs  split_header.rs  user_profile_popup.rs
crates/uploader/: Cargo.toml
crates/uploader/src/: lib.rs  log.rs
crates/webview/: Cargo.toml
crates/webview-host/: Cargo.toml
crates/webview-host/src/: main.rs
crates/webview/src/: ipc.rs  js.rs  lib.rs  protocol.rs  runtime.rs  state.rs
crates/webview/tests/: ipc.rs  js_helpers.rs  spawn.rs  state_machine.rs
docs/: API.md  API_Accounts_Settings.md  API_Chat.md  API_Core.md  API_Events.md  API_Moderation.md  API_UI.md  Examples.md  FEATURES_AND_KEYBINDS.md  HOME.md  Installation.md  Lifecycle.md  PLUGINS.md  PLUGIN_SCRIPTING.md  Release_v0.3.0.md  Release_v0.4.2.md
docs/releases/: Release_v0.4.1.md  Release_v0.4.3.md  Release_v0.4.5.md  Release_v0.4.6.md  Release_v0.4.8.md  Release_v0.4.9.md  Release_v0.5.0.md  Release_v0.5.1.md
plugins/: README.md
plugins/api_tour_plugin/: info.json  init.lua
plugins/c9_api_expansion_demo/: info.json  init.lua
plugins/channel_toolbox_plugin/: README.md  info.json  init.lua
plugins/clock_usage_plugin/: info.json  init.lua
plugins/event_callback_demo_plugin/: README.md  info.json  init.lua
plugins/hello_plugin/: info.json  init.lua
plugins/loader_progress_demo_plugin/: README.md  info.json  init.lua
plugins/stateful_counter_plugin/: README.md  info.json  init.lua
plugins/timer_plugin/: info.json  init.lua
plugins/ui_host_panel_demo_plugin/: info.json  init.lua
plugins/ui_host_panels_demo_plugin/: info.json  init.lua
plugins/ui_settings_demo_plugin/: info.json  init.lua
plugins/ui_window_showcase_plugin/: info.json  init.lua
scripts/: build_debian_release.sh  build_windows_release.ps1  write_app_rs.py
