[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/ui",
    "crates/core",
    "crates/twitch",
    "crates/kick",
    "crates/emotes",
    "crates/storage",
    "crates/uploader",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["crust contributors"]
license = "GPL-3.0-only"
repository = "https://github.com/frankischilling/crust"
homepage = "https://github.com/frankischilling/crust"
readme = "README.md"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
futures-util = "0.3"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# error handling
thiserror = "2"
anyhow = "1"

# logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# image decoding
image = { version = "0.25", default-features = false, features = ["png", "gif", "webp", "jpeg"] }

# LRU cache
lru = "0.12"

# GUI
eframe = { version = "0.31", features = ["persistence", "wayland", "x11"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image", "gif", "webp"] }

# Force arboard to include the Wayland data-control clipboard backend.
# Without this, egui-winit's arboard dep only has the X11 backend, which
# crashes the event loop on pure-Wayland sessions (Broken pipe / Exit 1).
arboard = { version = "3", features = ["wayland-data-control"] }

# misc
libc = "0.2"
directories = "5"
bytes = "1"
smallvec = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
url = "2"
async-trait = "0.1"
regex = "1"
once_cell = "1.19"
rusqlite = { version = "0.31", features = ["bundled"] }
cc = "1"
# Audio playback for sound notifications (mention / whisper / sub / raid /
# custom highlight). Default features enable cpal-based playback plus
# symphonia decoders for wav/mp3/ogg/flac, which covers every file format
# users are likely to drop in.
rodio = "0.22"

[profile.dev]
# Keep dev builds lean on low-disk Windows setups:
# - `debug = 0` avoids large PDB generation (`LNK1318` on full drives)
# - `incremental = false` avoids sizable incremental cache directories
debug = 0
incremental = false
# Mild optimization on our own crates so debug builds are usable
# (egui/image decoding are unusably slow at opt-level = 0).
opt-level = 1

# Optimize all third-party dependencies even in debug builds.
# This is the standard fix for egui/image/regex being unusably slow in `cargo run`.
# Our workspace crates still build at opt-level = 1 above for fast iteration.
[profile.dev.package."*"]
opt-level = 3
