[package]
name = "crust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Native Twitch chat client desktop application"
repository.workspace = true
homepage.workspace = true
build = "build.rs"

[[bin]]
name = "crust"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
smallvec = { workspace = true }
directories = { workspace = true }
crust-core = { path = "../core", version = "0.1.0" }
crust-ui = { path = "../ui", version = "0.1.0" }
crust-twitch = { path = "../twitch", version = "0.1.0" }
crust-kick = { path = "../kick", version = "0.1.0" }
crust-emotes = { path = "../emotes", version = "0.1.0" }
crust-storage = { path = "../storage", version = "0.1.0" }
libc = { workspace = true }

# Force wayland-data-control feature onto arboard (transitive via egui-winit)
arboard = { workspace = true }

[build-dependencies]
cc = { workspace = true }
