[package]
name = "crust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Native Twitch chat client desktop application"
repository.workspace = true
homepage.workspace = true
build = "build.rs"

[[bin]]
name = "crust"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
smallvec = { workspace = true }
directories = { workspace = true }
semver = "1"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
crust-core = { path = "../core", version = "0.4.9" }
crust-ui = { path = "../ui", version = "0.4.9" }
crust-twitch = { path = "../twitch", version = "0.4.9" }
crust-kick = { path = "../kick", version = "0.4.9" }
crust-emotes = { path = "../emotes", version = "0.4.9" }
crust-storage = { path = "../storage", version = "0.4.9" }
libc = { workspace = true }
base64 = "0.22"

# Force wayland-data-control feature onto arboard (transitive via egui-winit)
arboard = { workspace = true }

[build-dependencies]
cc = { workspace = true }
