[package]
name = "crust-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared domain models and message formatting for crust"
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
regex.workspace = true
