[package]
name = "crust-emotes"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
lru = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
bytes = { workspace = true }
async-trait = "0.1"
crust-core = { path = "../core" }
