[package]
name = "crust-emotes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Emote provider loading and image cache for crust"
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
lru = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
bytes = { workspace = true }
async-trait = "0.1"
crust-core = { path = "../core", version = "0.4.9" }
