[package]
name = "crust-kick"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
smallvec = { workspace = true }
crust-core = { path = "../core" }
