[package]
name = "crust-kick"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Kick chat session integration for crust"
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
smallvec = { workspace = true }
crust-core = { path = "../core", version = "0.4.3" }
