[package]
name = "crust-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Settings, token, and chat log storage for crust"
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
keyring = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
crust-core = { path = "../core", version = "0.4.2" }
rusqlite = { workspace = true }
