[package]
name = "crust-twitch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Twitch IRC and EventSub session client for crust"
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-native-tls = { workspace = true }
native-tls = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
crust-core = { path = "../core", version = "0.4.9" }
