[package]
name = "crust-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "egui desktop UI and widgets for crust"
repository.workspace = true
homepage.workspace = true

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
image = { workspace = true }
crust-core = { path = "../core", version = "0.4.9" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
regex = { workspace = true }
smallvec = { workspace = true }
